// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuyLand renders the component final state - account ready 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <LandForSale
    landForSale={
      Object {
        "asset": Object {
          "id": "0123456789",
          "img": "https://api.decentraland.org/v1/parcels/0/0/map.png",
          "name": "Sample Parcel",
          "type": "PARCEL",
        },
        "id": "2",
        "priceMana": 0,
        "priceUSD": 0,
      }
    }
  />
  <Component
    style={
      Object {
        "flexDirection": "row",
        "marginTop": 66.7,
      }
    }
  >
    <Button
      onPress={[Function]}
      title="Buy"
    />
  </Component>
</Component>
`;

exports[`BuyLand renders the component initial state - before start account setup 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <LandForSale
    landForSale={
      Object {
        "asset": Object {
          "id": "0123456789",
          "img": "https://api.decentraland.org/v1/parcels/0/0/map.png",
          "name": "Sample Parcel",
          "type": "PARCEL",
        },
        "id": "2",
        "priceMana": 0,
        "priceUSD": 0,
      }
    }
  />
  <Component
    style={
      Object {
        "flexDirection": "row",
        "marginTop": 66.7,
      }
    }
  >
    <Button
      onPress={[Function]}
      title="Buy"
    />
  </Component>
</Component>
`;

exports[`BuyLand renders the component waiting for setup - waiting for ETH funding 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <LandForSale
    landForSale={
      Object {
        "asset": Object {
          "id": "0123456789",
          "img": "https://api.decentraland.org/v1/parcels/0/0/map.png",
          "name": "Sample Parcel",
          "type": "PARCEL",
        },
        "id": "2",
        "priceMana": 0,
        "priceUSD": 0,
      }
    }
  />
  <Component
    style={
      Object {
        "flexDirection": "row",
        "marginTop": 66.7,
      }
    }
  >
    <Button
      disabled={true}
      onPress={[Function]}
      title="Buy"
    />
  </Component>
  <AccountCreationProgress
    status="FUNDING_WITH_ETH"
  />
</Component>
`;

exports[`BuyLand renders the component waiting for setup - waiting for MANA funding 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <LandForSale
    landForSale={
      Object {
        "asset": Object {
          "id": "0123456789",
          "img": "https://api.decentraland.org/v1/parcels/0/0/map.png",
          "name": "Sample Parcel",
          "type": "PARCEL",
        },
        "id": "2",
        "priceMana": 0,
        "priceUSD": 0,
      }
    }
  />
  <Component
    style={
      Object {
        "flexDirection": "row",
        "marginTop": 66.7,
      }
    }
  >
    <Button
      disabled={true}
      onPress={[Function]}
      title="Buy"
    />
  </Component>
  <AccountCreationProgress
    status="FUNDING_WITH_MANA"
  />
</Component>
`;

exports[`BuyLand renders the component waiting for setup - waiting for MANA funding and marketplace approval 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <LandForSale
    landForSale={
      Object {
        "asset": Object {
          "id": "0123456789",
          "img": "https://api.decentraland.org/v1/parcels/0/0/map.png",
          "name": "Sample Parcel",
          "type": "PARCEL",
        },
        "id": "2",
        "priceMana": 0,
        "priceUSD": 0,
      }
    }
  />
  <Component
    style={
      Object {
        "flexDirection": "row",
        "marginTop": 66.7,
      }
    }
  >
    <Button
      disabled={true}
      onPress={[Function]}
      title="Buy"
    />
  </Component>
  <AccountCreationProgress
    status="FUNDING_WITH_MANA_AND_APPROVING_MARKETPLACE"
  />
</Component>
`;

exports[`BuyLand renders the component waiting for setup - waiting for account generation 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <LandForSale
    landForSale={
      Object {
        "asset": Object {
          "id": "0123456789",
          "img": "https://api.decentraland.org/v1/parcels/0/0/map.png",
          "name": "Sample Parcel",
          "type": "PARCEL",
        },
        "id": "2",
        "priceMana": 0,
        "priceUSD": 0,
      }
    }
  />
  <Component
    style={
      Object {
        "flexDirection": "row",
        "marginTop": 66.7,
      }
    }
  >
    <Button
      disabled={true}
      onPress={[Function]}
      title="Buy"
    />
  </Component>
  <AccountCreationProgress
    status="GENERATING_ACCOUNT"
  />
</Component>
`;

exports[`BuyLand renders the component waiting for setup - waiting for marketplace approval 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "white",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <LandForSale
    landForSale={
      Object {
        "asset": Object {
          "id": "0123456789",
          "img": "https://api.decentraland.org/v1/parcels/0/0/map.png",
          "name": "Sample Parcel",
          "type": "PARCEL",
        },
        "id": "2",
        "priceMana": 0,
        "priceUSD": 0,
      }
    }
  />
  <Component
    style={
      Object {
        "flexDirection": "row",
        "marginTop": 66.7,
      }
    }
  >
    <Button
      disabled={true}
      onPress={[Function]}
      title="Buy"
    />
  </Component>
  <AccountCreationProgress
    status="APPROVING_MARKETPLACE"
  />
</Component>
`;
